# bekymringsmelding-protos

./: .gitignore  Cargo.toml  README.md
lib-protobuf/: Cargo.toml  build.rs
lib-protobuf/src/: arkiv_eventtype.rs  bm_api_eventtype.rs  eventtype.rs  lib.rs  maskinvurdering_eventtype.rs  protobuf.rs  serialization.rs
lib-protobuf/src/json/v1/: mod.rs
lib-protobuf/src/json/v1/slakterimelding/: avsender.rs  funn.rs  hvittkjott.rs  kategori.rs  leveranse.rs  mod.rs  rodtkjott.rs  slakteri.rs  tilsynsobjekt.rs  vurdering.rs
lib-protobuf/src/json/v2/slakterimelding/: funn.rs  mod.rs  rodtkjott.rs  slakteri.rs  tilsynsobjekt.rs
lib-protobuf/src/protos/v1/: event.proto  identifisering.proto  oppfolging.proto  status.proto
lib-protobuf/src/protos/v1/arkivering/: arkiv_jobb.proto  arkivering_status.proto
lib-protobuf/src/protos/v1/hvittkjott/: hvittkjott.proto  leveranse.proto
lib-protobuf/src/protos/v1/identifisering/: behandlende_enhet.proto  manuell_identifisering.proto  maskin_identifisering.proto
lib-protobuf/src/protos/v1/person/: ansatt.proto  generell_person.proto
lib-protobuf/src/protos/v1/publikum/: publikum.proto
lib-protobuf/src/protos/v1/rodtkjott/: funn.proto  observasjon.proto  rodtkjott.proto
lib-protobuf/src/protos/v1/ulovlig_import_av_dyr/: ulovlig_import_av_dyr.proto
lib-protobuf/src/protos/v1/virksomhet/: organisasjon.proto  slakteri.proto  tilsynsobjekt.proto
lib-protobuf/src/protos/v1/vurdering/: manuell_vurdering.proto  maskinvurdering.proto
lib-protobuf/src/protos/v2/publikum/: publikum.proto
(+3 files in other folders)
