[package]
name = "lib-protobuf"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.14.4", features = ["derive"] }
bytes = "^1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.14.4"

